adding files to my first commint

--- a/index.html
+++ b/index.html
@@ -26,71 +26,10 @@
       href="https://fonts.googleapis.com/css?family=Lato&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="css/mediaQuery.css" />
-  </head>
-  <body>
-    <div class="hero">
-      <div class="container-fluid">
-        <nav role="navigation" class="navbar">
-          <div class="menu">
-            <ul>
-              <li>
-                <a href="#"><i class="fab fa-apple"></i></a>
-              </li>
-              <li><a href="#">Iphone 11Pro</a></li>
-              <li><a href="#">Iphone 11</a></li>
-              <li><a href="#">Iphone X</a></li>
-              <li><a href="#">Mac</a></li>
-              <li><a href="#">ITV</a></li>
-            </ul>
-            <form>
-              <input type="text" placeholder="Find your device..." />
-              <button class="btn btn-success">Search</button>
-            </form>
-          </div>
-        </nav>
-      </div>
 
-      <header role="header">
-        <img src="img/10.jpg" alt="" class="nube" />
-        <div class="row">
-          <div
-            class="col-lg-6 col-sm-12 col-md-6"
-            data-aos="fade-right"
-            data-aos-duration="2000"
-          >
-            <div class="container-info">
-              <h1>IPhone 11 Pro</h1>
-              <h3>Pro cameras. Pro display</h3>
-              <p data-aos="fade-up" data-aos-duration="2000">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis
-                reiciendis aliquam officia aliquid dolorum. Temporibus
-                blanditiis earum ex sed mollitia debitis, fugiat exercitationem
-                magni incidunt qui consequatur accusantium nam reiciendis?
-              </p>
-              <button
-                class="btn btn-outline-success"
-                data-aos="fade-up"
-                data-aos-duration="2000"
-              >
-                Read more
-              </button>
-            </div>
-          </div>
-          <div
-            class="col-lg-6 col-sm-12 col-md-6"
-            data-aos="fade-left"
-            data-aos-duration="2000"
-          >
-            <div class="container-img">
-              <img src="img/sinFondo.png" alt="" />
-            </div>
-          </div>
-        </div>
-      </header>
-    </div>
-  </body>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body></body>
   <script
     src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
